--- a/app/globals.css
+++ b/app/globals.css
@@ -10,6 +10,7 @@
 
 body {
   color: #000000BF;
+  background-color: #FFFFFF;
   font-family: 'Courier New', monospace;
   font-size: 16px;
 }
@@ -17,5 +18,13 @@ body {
 @layer utilities {
   .text-balance {
     text-wrap: balance;
+  }
+}
+
+
+@media (prefers-color-scheme: dark) {
+  body{
+    background-color:#000000BF;
+    color:#FFFFFF;
   }
 }
