fixes and improvements

--- a/app/globals.css
+++ b/app/globals.css
@@ -9,7 +9,7 @@
 
 
 body {
-  color: #000000BF;
+  color: #404040;
   background-color: #FFFFFF;
   font-family: 'Courier New', monospace;
   font-size: 16px;
@@ -24,7 +24,7 @@ body {
 
 @media (prefers-color-scheme: dark) {
   body{
-    background-color:#000000BF;
+    background-color:#404040;
     color:#FFFFFF;
   }
 }
