--- a/app/components/Carousel/Carousel.module.css
+++ b/app/components/Carousel/Carousel.module.css
@@ -3,6 +3,7 @@
   max-width: 60%;
   margin: auto;
   margin-top: 3rem;
+  grid-area: 1/4/1/13
 }
 
 .embla__container {
@@ -16,6 +17,7 @@
   flex: 0 0 auto;
   display: grid;
   justify-content: center;
+  align-content: center;
   min-width: 0;
   padding: 1rem;
 
@@ -40,11 +42,22 @@
   display: grid;
   grid-template-columns: repeat(15, 1fr);
   grid-template-rows: auto auto;
-  /* grid areas defined in Carousel.tsx */
+  /* grid areas for buttons are defined in Carousel.tsx */
   align-items: center;
   justify-content: center;
 }
 
 .caption {
   margin: 3rem;
+}
+
+
+@media (max-width:480px) {
+  .carouselBtn{
+    display: none;
+  }
+  .embla{
+    grid-area: 1/1/1/16;
+    max-width: 90%;
+  }
 }
