--- a/app/globals.css
+++ b/app/globals.css
@@ -3,6 +3,18 @@
 @tailwind utilities;
 @import url('https://fonts.googleapis.com/css2?family=EB+Garamond&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Courier+Prime:ital,wght@0,400;0,700;1,400;1,700&display=swap');
+@font-face {
+  font-family: "MonumentGroteskMedium";
+  font-weight: 500;
+  font-style: normal;
+  src: url(/fonts/MonumentGrotesk-Medium.woff2) format(woff2);
+}
+@font-face {
+  font-family: "MonumentGroteskMono";
+  font-weight: normal;
+  font-style: normal;
+  src: url(/fonts/MonumentGrotesk-Mono.woff2) format(woff2);
+}
 :root {
   --foreground-rgb: 0, 0, 0;
 }
@@ -11,7 +23,8 @@
 body {
   color: #404040;
   background-color: #FFFFFF;
-  font-family: 'Courier New', monospace;
+  /*font-family: 'Courier New', monospace;*/
+  font-family: 'MonumentGroteskMono';
   font-size: 16px;
 }
 
