--- a/app/components/NavBar/Navbar.module.css
+++ b/app/components/NavBar/Navbar.module.css
@@ -1,34 +1,34 @@
 .navWrap {
-    height: 5rem;
-    margin-left: 2rem;
-    display: grid;
-    align-items: center;
-    grid-template-columns: 70% 30%;
-    
+  height: 5rem;
+  margin-left: 2rem;
+  display: grid;
+  align-items: center;
+  grid-template-columns: 70% 30%;
 }
 
-.title{
-    font-size: 17px;
-    font-weight: 600;
+.title {
+  font-family: "MonumentGroteskMedium";
+  font-size: 20px;
+  color: #525252;
 }
 
-.links{
-    text-align: right;
-    margin-right: 10px;
+.links {
+  text-align: right;
+  margin-right: 10px;
 }
 
-@media (max-width:480px) {
-    .navWrap{
-        grid-template-columns: auto;
-        grid-auto-rows: auto;
-        margin-left: 0;
-        margin-top: 1rem;
-    }
-    .links{
-        text-align: center;
-        margin: 1rem;
-    }
-    .title{
-        text-align: center;
-    }
+@media (max-width: 480px) {
+  .navWrap {
+    grid-template-columns: auto;
+    grid-auto-rows: auto;
+    margin-left: 0;
+    margin-top: 1rem;
+  }
+  .links {
+    text-align: center;
+    margin: 1rem;
+  }
+  .title {
+    text-align: center;
+  }
 }
