--- a/app/globals.css
+++ b/app/globals.css
@@ -7,13 +7,13 @@
   font-family: "MonumentGroteskMedium";
   font-weight: 500;
   font-style: normal;
-  src: url(/fonts/MonumentGrotesk-Medium.woff2) format(woff2);
+  src: url(/../fonts/MonumentGrotesk-Medium.woff2) format(woff2);
 }
 @font-face {
   font-family: "MonumentGroteskMono";
   font-weight: normal;
   font-style: normal;
-  src: url(/fonts/MonumentGrotesk-Mono.woff2) format(woff2);
+  src: url(/../fonts/MonumentGrotesk-Mono.woff2) format(woff2);
 }
 :root {
   --foreground-rgb: 0, 0, 0;
