--- a/app/components/NavBar/Navbar.module.css
+++ b/app/components/NavBar/Navbar.module.css
@@ -7,7 +7,7 @@
 }
 
 .title {
-  font-family: "MonumentGroteskMedium";
+  font-family: var(--font-medium);
   font-size: 20px;
   color: #525252;
 }
