--- a/app/globals.css
+++ b/app/globals.css
@@ -23,8 +23,8 @@
 body {
   color: #404040;
   background-color: #FFFFFF;
-  /*font-family: 'Courier New', monospace;*/
-  font-family: var(--font-mono);
+  font-family: 'Courier New', monospace;
+  /*font-family: var(--font-mono);*/
   font-style: normal;
   font-weight: normal;
   font-size: 16px;
@@ -37,9 +37,9 @@ body {
 }
 
 
-@media (prefers-color-scheme: dark) {
+/*@media (prefers-color-scheme: dark) {
   body{
     background-color:#404040;
     color:#FFFFFF;
   }
-}
+}*/
