--- a/app/about/page.module.css
+++ b/app/about/page.module.css
@@ -1,7 +1,7 @@
 .contentWrap{
     height: 80vh;
     display: grid;
-    align-items: center;
+    align-content: center;
     justify-content: center;
-    
+    justify-items: center;
 }
